<package format="3">
  <name>action_server_monitor</name>
  <version>0.1.0</version>
  <description>
    ActionServerMonitor provides an RQT GUI for tracking multiple action servers.
    Adapted from https://github.com/ros-visualization/rqt_plot
  </description>
  <maintainer email="danielmohansahu@gmail.com">Daniel M. Sahu</maintainer>

  <license>BSD</license>

  <author email="danielmohansahu@gmail.com">Daniel M. Sahu</author>
  <author>Dorian Scholz</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author email="mabel@openrobotics.org">Mabel Zhang</author>
  <author email="logans@cottsay.net">Scott K Logan</author>
  <author email="scholz@sim.tu-darmstadt.de">Dorian Scholz</author>
  <author email="namniart@gmail.com">Austin Hendrix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend version_gte="0.2.25">qt_gui_py_common</exec_depend>
  <exec_depend>qwt_dependency</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
